<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    app:titleTextColor="@color/white"
    app:title="City name"
    android:background="@color/colorPrimary"
    android:layout_height="?attr/actionBarSize"
    />

<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".explore.ExploreActivity">

    <include
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/explore_cityimage"/>
    <TextView
        android:text="@string/about_city"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/temp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-medium   "
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/physical_artifacts"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderCircularHandlerEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="@android:color/darker_gray"
            app:sliderScrollTimeInSec="600"
            app:sliderStartAutoCycle="false" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/practices"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/pic"
                android:scaleType="centerCrop"
                android:layout_height="250dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/temp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/skills"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/pic"
                android:scaleType="centerCrop"
                android:layout_height="250dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/temp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>
</androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>
</LinearLayout>